// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AttachButton should call handleAttachButtonPress when the button is clicked if passed 1`] = `
<View>
  <View
    keyboardVerticalOffset={86.5}
    onLayout={[Function]}
    style={
      {
        "paddingBottom": 0,
      }
    }
  >
    <View
      style={
        {
          "height": "100%",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "borderRadius": 24,
              "height": 48,
              "width": 48,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E2E6EA",
              "borderWidth": 1,
            },
            {},
          ]
        }
        testID="attach-button"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={20}
          bbWidth={20}
          focusable={false}
          height={20}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#384047"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1.5}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 20,
                "width": 20,
              },
            ]
          }
          vbHeight={20}
          vbWidth={20}
          width={20}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4281876551,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.5}
          >
            <RNSVGPath
              d="M10 3.125V10M10 10V16.875M10 10H3.125M10 10H16.875"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                [
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4281876551,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={1.5}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      enablePanDownToClose={true}
      handleComponent={[Function]}
      handleHeight={20}
      index={-1}
      onChange={[Function]}
      snapPoints={
        [
          600.3000000000001,
          1334,
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          {
            "backgroundColor": "#FFFFFF",
            "flexGrow": 1,
            "opacity": 1,
          }
        }
        data={[]}
        getItem={[Function]}
        getItemCount={[Function]}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onEndReached={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={0.0001}
        stickyHeaderIndices={[]}
        testID="attachment-picker-list"
        viewabilityConfigCallbackPairs={[]}
      >
        <View />
      </RCTScrollView>
    </View>
  </View>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 0,
          },
          {
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "height": 0,
            },
            {
              "transform": [
                {
                  "scale": 0,
                },
                {
                  "translateY": 0,
                },
              ],
            },
            {
              "overflow": "visible",
              "shadowColor": "white",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 10,
            },
          ]
        }
      >
        <View
          name="top-item"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "height": 0,
            },
            {
              "transform": [
                {
                  "translateY": 0,
                },
              ],
            },
          ]
        }
      >
        <View
          name="message-overlay"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        style={
          [
            {
              "height": 0,
            },
            {
              "transform": [
                {
                  "scale": 0,
                },
                {
                  "translateY": 0,
                },
              ],
            },
            {
              "overflow": "visible",
              "shadowColor": "white",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 10,
            },
          ]
        }
      >
        <View
          name="bottom-item"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`AttachButton should render a enabled AttachButton 1`] = `
<View>
  <View
    keyboardVerticalOffset={86.5}
    onLayout={[Function]}
    style={
      {
        "paddingBottom": 0,
      }
    }
  >
    <View
      style={
        {
          "height": "100%",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "borderRadius": 24,
              "height": 48,
              "width": 48,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E2E6EA",
              "borderWidth": 1,
            },
            {},
          ]
        }
        testID="attach-button"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={20}
          bbWidth={20}
          focusable={false}
          height={20}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#384047"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1.5}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 20,
                "width": 20,
              },
            ]
          }
          vbHeight={20}
          vbWidth={20}
          width={20}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4281876551,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.5}
          >
            <RNSVGPath
              d="M10 3.125V10M10 10V16.875M10 10H3.125M10 10H16.875"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                [
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4281876551,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={1.5}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      enablePanDownToClose={true}
      handleComponent={[Function]}
      handleHeight={20}
      index={-1}
      onChange={[Function]}
      snapPoints={
        [
          600.3000000000001,
          1334,
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          {
            "backgroundColor": "#FFFFFF",
            "flexGrow": 1,
            "opacity": 1,
          }
        }
        data={[]}
        getItem={[Function]}
        getItemCount={[Function]}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onEndReached={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={0.0001}
        stickyHeaderIndices={[]}
        testID="attachment-picker-list"
        viewabilityConfigCallbackPairs={[]}
      >
        <View />
      </RCTScrollView>
    </View>
  </View>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 0,
          },
          {
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "height": 0,
            },
            {
              "transform": [
                {
                  "scale": 0,
                },
                {
                  "translateY": 0,
                },
              ],
            },
            {
              "overflow": "visible",
              "shadowColor": "white",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 10,
            },
          ]
        }
      >
        <View
          name="top-item"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "height": 0,
            },
            {
              "transform": [
                {
                  "translateY": 0,
                },
              ],
            },
          ]
        }
      >
        <View
          name="message-overlay"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        style={
          [
            {
              "height": 0,
            },
            {
              "transform": [
                {
                  "scale": 0,
                },
                {
                  "translateY": 0,
                },
              ],
            },
            {
              "overflow": "visible",
              "shadowColor": "white",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 10,
            },
          ]
        }
      >
        <View
          name="bottom-item"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`AttachButton should render an disabled AttachButton 1`] = `
<View>
  <View
    keyboardVerticalOffset={86.5}
    onLayout={[Function]}
    style={
      {
        "paddingBottom": 0,
      }
    }
  >
    <View
      style={
        {
          "height": "100%",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "borderRadius": 24,
              "height": 48,
              "width": 48,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E2E6EA",
              "borderWidth": 1,
            },
            {},
          ]
        }
        testID="attach-button"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={20}
          bbWidth={20}
          focusable={false}
          height={20}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#B8BEC4"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1.5}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 20,
                "width": 20,
              },
            ]
          }
          vbHeight={20}
          vbWidth={20}
          width={20}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4290297540,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.5}
          >
            <RNSVGPath
              d="M10 3.125V10M10 10V16.875M10 10H3.125M10 10H16.875"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                [
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4290297540,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={1.5}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      enablePanDownToClose={true}
      handleComponent={[Function]}
      handleHeight={20}
      index={-1}
      onChange={[Function]}
      snapPoints={
        [
          600.3000000000001,
          1334,
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          {
            "backgroundColor": "#FFFFFF",
            "flexGrow": 1,
            "opacity": 1,
          }
        }
        data={[]}
        getItem={[Function]}
        getItemCount={[Function]}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onEndReached={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={0.0001}
        stickyHeaderIndices={[]}
        testID="attachment-picker-list"
        viewabilityConfigCallbackPairs={[]}
      >
        <View />
      </RCTScrollView>
    </View>
  </View>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 0,
          },
          {
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "height": 0,
            },
            {
              "transform": [
                {
                  "scale": 0,
                },
                {
                  "translateY": 0,
                },
              ],
            },
            {
              "overflow": "visible",
              "shadowColor": "white",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 10,
            },
          ]
        }
      >
        <View
          name="top-item"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "height": 0,
            },
            {
              "transform": [
                {
                  "translateY": 0,
                },
              ],
            },
          ]
        }
      >
        <View
          name="message-overlay"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        style={
          [
            {
              "height": 0,
            },
            {
              "transform": [
                {
                  "scale": 0,
                },
                {
                  "translateY": 0,
                },
              ],
            },
            {
              "overflow": "visible",
              "shadowColor": "white",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 10,
            },
          ]
        }
      >
        <View
          name="bottom-item"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
